--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="src/index.css">
         <title>Tetris</title>
-        <script type="module" src="leaderboard.js"></script>
-        <script src="game.js" defer></script>
+        <script type="module" src="src/leaderboard.js"></script>
+        <script src="src/game.js" defer></script>
     </head>
     <body>
         <div id="assets">
