--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         
         <footer>
             <p style="font-family: sans-serif;">
-                Developed by: Andrew Erwin &amp; Tommy Vo | Check out the <a href="https://github.com/votommy/js-tetris" target="_blank" rel="noopener noreferrer" aria-label="Github repository for modded version - opens in new tab" >repo</a>.
+                Developed by: Tommy Vo | Check out the <a href="https://github.com/votommy/Tetris-JS" target="_blank" rel="noopener noreferrer" aria-label="Github repository for modded version - opens in new tab" >repo</a>.
             </p>
         </footer>
     </body>
