--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div id="assets">
-            <img id="bg" src="../img/bg.png" height="400" width="200" />
-            <img id="cube" src="../img/cube.png" height="20" width="20" />
+            <img id="bg" src="img/bg.png" height="400" width="200" />
+            <img id="cube" src="img/cube.png" height="20" width="20" />
         </div>
         
         <br><br>
