--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Tetris</title>
         <script type="module" src="src/leaderboard.js"></script>
         <script src="src/game.js" defer></script>
+        <link rel="icon" href="img/logo.svg" type="image/svg"> <!--favicon-->
     </head>
     <body>
         <div id="assets">
