--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
         <footer>
             <p style="font-family: sans-serif;">
-                Developed by: Tommy Vo | Check out the <a href="https://github.com/votommy/Tetris-JS" target="_blank" rel="noopener noreferrer" aria-label="Github repository for modded version - opens in new tab" >repo</a>.
+                Developed by: Tommy Vo | Check out the source code on <a href="https://github.com/votommy/Tetris-JS" target="_blank" rel="noopener noreferrer" aria-label="Github repository for modded version - opens in new tab" >Github</a>.
             </p>
         </footer>
     </body>
