--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                 <label for="highScore">Score:</label>
                 <input id="highscore" type="number" name="highscore" readonly="readonly">
 
+                <input id="timestamp" type="datetime" name="timestamp" readonly="readonly">
+
                 <br>
                 <button id="addScoreBtn">OK</button>
             </form>
