Implemented Hold feature

--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
             <div id="spacebar">______</div><span id="spaceTxt">HARD DROP</span>
             <div id="zBtn">Z</div><span id="zTxt">ROTATE<br>LEFT</span>
             <div id="xBtn">X</div><span id="xTxt">ROTATE<br>RIGHT</span>
-            <div id="escBtn">Esc</div><span id="rTxt">RESTART</span>
+            <div id="shiftBtn">Shift</div><span id="shiftTxt">HOLD</span>
+            <div id="escBtn">Esc</div><span id="escTxt">RESTART</span>
         </div>
         <div id="tetris">
             <h1>TETRIS CLONE</h1>
+            <div id="sidebar-left">
+                <label>HOLD</label>
+                <br><br>
+                <div id="jailcell">
+                    <canvas id="jailcellarea" height="80" width="80"></canvas>
+                </div>
+            </div>
             <div id="main">
                 <div id="startDirection"><p>PRESS ENTER<br>TO START</p></div>
                 <div id="gameOverMsg"><p>GAME OVER<br>TRY AGAIN</p></div>
