--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="src/index.css">
-        <title>Tetris</title>
+        <title>Tetris JS</title>
         <script type="module" src="src/leaderboard.js"></script>
         <script src="src/game.js" defer></script>
         <link rel="icon" href="img/logo.svg" type="image/svg"> <!--favicon-->
@@ -12,7 +12,6 @@
             <img id="cube" src="img/cube.png" height="20" width="20" />
         </div>
         
-        <br><br>
         <div class="keyboard">
             <div id="leftArrow">&#8592;</div><span id="leftArrowTxt">MOVE<br>LEFT</span>
             <div id="rightArrow">&#8594;</div><span id="rightArrowTxt">MOVE<br>RIGHT</span>
@@ -25,7 +24,7 @@
             <div id="escBtn">Esc</div><span id="escTxt">RESTART</span>
         </div>
         <div id="tetris">
-            <h1>TETRIS CLONE</h1>
+            <h1>TETRIS JS</h1>
             <div id="sidebar-left">
                 <label>HOLD</label>
                 <br><br>
