--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         </div>
         
         <footer>
-            <p style="font-family: sans-serif;">
-                Developed by: Tommy Vo | Check out the source code on <a href="https://github.com/votommy/Tetris-JS" target="_blank" rel="noopener noreferrer" aria-label="Github repository for modded version - opens in new tab" >Github</a>.
+            <p>
+                Developed by: Tommy Vo | <a href="https://github.com/votommy/Tetris-JS" title="Github" target="_blank" rel="noopener noreferrer" aria-label="Github repository for modded version - opens in new tab" >Source Code</a>
             </p>
         </footer>
     </body>
