Add Pause feature

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div id="xBtn">X</div><span id="xTxt">ROTATE<br>RIGHT</span>
             <div id="shiftBtn">Shift</div><span id="shiftTxt">HOLD</span>
             <div id="escBtn">Esc</div><span id="escTxt">RESTART</span>
+            <div id="pBtn">P</div><span id="pTxt">PAUSE</span>
         </div>
         <div id="tetris">
             <h1>TETRIS JS</h1>
