--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
         <footer>
             <p>
-                Developed by: Tommy | <a href="https://github.com/votommy/Tetris-JS" title="Github" target="_blank" rel="noopener noreferrer" aria-label="Github repository for modded version - opens in new tab" >Source Code</a>
+                ©2023 Developed by: Tommy, aka TOM
             </p>
         </footer>
     </body>
