--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
         <footer>
             <p>
-                ©2023 Developed by: Tommy, aka TOM
+                ©2023 Developed by: Tommy
             </p>
         </footer>
     </body>
